--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -1,6 +1,97 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prototype Code : Scraper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GET URL FUNCTION\n",
+    "def get_url():\n",
+    "    return input(\"Enter Website URL: \")\n",
+    "\n",
+    "# DATA SCRAPING FUNCTION\n",
+    "def data_scrape(url):\n",
+    "    # Set up Selenium with a WebDriver, e.g., ChromeDriver\n",
+    "    driver = webdriver.Firefox()\n",
+    "    \n",
+    "    # Open the website\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    # Find all visible buttons\n",
+    "    buttons = driver.find_elements(By.CSS_SELECTOR, \"button\")\n",
+    "    visible_buttons = []\n",
+    "    for button in buttons:\n",
+    "        if button.is_displayed():\n",
+    "            store = f\"Button Element: {button.text} with URL : {button.get_attribute('href')}\"\n",
+    "            visible_buttons.append(store)\n",
+    "            \n",
+    "    # Find all visible links\n",
+    "    links = driver.find_elements(By.TAG_NAME,\"a\")\n",
+    "    visible_links = []\n",
+    "    for link in links:\n",
+    "        if link.is_displayed():\n",
+    "            store = f\"Link Element: {link.text} with URL : {link.get_attribute('href')}\"\n",
+    "            visible_links.append(store)\n",
+    "            \n",
+    "    # Find all visible forms (text inputs)\n",
+    "    visible_text_inputs = []\n",
+    "    # Scrape input fields\n",
+    "    input_fields = driver.find_elements(By.TAG_NAME,\"input\")\n",
+    "    for input_field in input_fields:\n",
+    "        if input_field.is_displayed():\n",
+    "            store = f\"Input Field Name: {input_field.get_attribute(\"name\")} Input field type: {input_field.get_attribute(\"type\")}\"\n",
+    "            visible_text_inputs.append(store)\n",
+    "    \n",
+    "    # Find all visible text\n",
+    "    visible_text = []\n",
+    "    # Scrape headings\n",
+    "    for level in range(1, 7):  # HTML has 6 levels of headings (h1 to h6)\n",
+    "        headings = driver.find_elements(By.TAG_NAME,f\"h{level}\")\n",
+    "        for heading in headings:\n",
+    "            if heading.is_displayed():\n",
+    "                store = f\"Heading (h{level}): {heading.text}\"\n",
+    "                visible_text.append(store)\n",
+    "    # Scrape text content\n",
+    "    paragraphs = driver.find_elements(By.TAG_NAME,\"p\")\n",
+    "    for paragraph in paragraphs:\n",
+    "        if paragraph.is_displayed():\n",
+    "            store = f\"Paragraph Text: {paragraph.text}\"\n",
+    "            visible_text.append(store)\n",
+    "            \n",
+    "    # Find all visible navigation menus\n",
+    "    visible_nav_menus = []\n",
+    "    # Scrape navigation menus\n",
+    "    navigation_menus = driver.find_elements(By.TAG_NAME,\"nav\")\n",
+    "    for nav in navigation_menus:\n",
+    "        if nav.is_displayed():\n",
+    "            store = f\"Navigation Menu: {nav.text}\"\n",
+    "            visible_nav_menus.append(store)\n",
+    "            \n",
+    "    # Close the browser\n",
+    "    driver.quit()\n",
+    "\n",
+    "    # Return Data\n",
+    "    data = []\n",
+    "    \n",
+    "    # Data append\n",
+    "    data.append(visible_buttons)\n",
+    "    data.append(visible_links)\n",
+    "    data.append(visible_text_inputs)\n",
+    "    data.append(visible_text)\n",
+    "    data.append(visible_nav_menus)\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
