setup todos for scraper element (dataset generator)

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -71,6 +71,20 @@
     "        return_data.append(element_test_cases)\n",
     "    return return_data\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Version 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
