--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -96,7 +96,162 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Possibly Outdated: Other methods\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "# Set up Selenium with a WebDriver, e.g., ChromeDriver\n",
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "# Open the website\n",
+    "driver.get(\"https://example.com\")\n",
+    "\n",
+    "# Find an element (example button)\n",
+    "button = driver.find_element_by_css_selector(\"button\")\n",
+    "\n",
+    "# Get various properties\n",
+    "button_text = button.text\n",
+    "button_id = button.get_attribute(\"id\")\n",
+    "button_class = button.get_attribute(\"class\")\n",
+    "button_color = button.value_of_css_property(\"background-color\")\n",
+    "button_size = button.size\n",
+    "button_location = button.location\n",
+    "button_tag_name = button.tag_name\n",
+    "button_visible = button.is_displayed()\n",
+    "button_enabled = button.is_enabled()\n",
+    "button_inner_html = button.get_attribute(\"innerHTML\")\n",
+    "\n",
+    "# Print properties\n",
+    "print(\"Button text:\", button_text)\n",
+    "print(\"Button ID:\", button_id)\n",
+    "print(\"Button class:\", button_class)\n",
+    "print(\"Button color:\", button_color)\n",
+    "print(\"Button size:\", button_size)\n",
+    "print(\"Button location:\", button_location)\n",
+    "print(\"Button tag name:\", button_tag_name)\n",
+    "print(\"Button visible:\", button_visible)\n",
+    "print(\"Button enabled:\", button_enabled)\n",
+    "print(\"Button inner HTML:\", button_inner_html)\n",
+    "\n",
+    "# Close the browser\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Version 1: Improvement According to Design"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#####################################\n",
+    "# GET URL FUNCTION (non UI version) #\n",
+    "#####################################\n",
+    "def get_url():\n",
+    "    return input(\"Enter Website URL: \")\n",
+    "\n",
+    "# DATA SCRAPING FUNCTION\n",
+    "def data_scrape(url):\n",
+    "    # Setup Selenium Webdriver\n",
+    "    # TODO : Add other drivers according to user settings. Detect user browser and use that as driver potentially\n",
+    "    driver = webdriver.Firefox()\n",
+    "    # Setup Return Data\n",
+    "    data = []\n",
+    "\n",
+    "    # Open the website\n",
+    "    driver.get(url)\n",
+    "\n",
+    "    #######################################\n",
+    "    ## GET UI ELEMENTS (must be visible) ##\n",
+    "    #######################################\n",
+    "\n",
+    "    # BUTTONS\n",
+    "    # TODO : \"Button <button-name> with size <size> and color <color>. This button is <isEnabled>\"\n",
+    "    \"\"\"\n",
+    "    - Name (text)\n",
+    "    - Size \n",
+    "    - Color \n",
+    "    - isEnabled\n",
+    "    \"\"\"\n",
+    "    buttons = driver.find_elements(By.CSS_SELECTOR, \"button\")\n",
+    "    visible_buttons = []\n",
+    "    for button in buttons:\n",
+    "        if button.is_displayed():\n",
+    "            store = f\"Button Element: {button.text} with URL : {button.get_attribute('href')}\"\n",
+    "            visible_buttons.append(store)\n",
+    "            \n",
+    "    # LINKS\n",
+    "    # TODO : \"Link <link-name> with url <href>\"\n",
+    "    \"\"\"\n",
+    "    - Name (text)\n",
+    "    - href\n",
+    "    \"\"\"\n",
+    "    links = driver.find_elements(By.TAG_NAME,\"a\")\n",
+    "    visible_links = []\n",
+    "    for link in links:\n",
+    "        if link.is_displayed():\n",
+    "            store = f\"Link Element: {link.text} with URL : {link.get_attribute('href')}\"\n",
+    "            visible_links.append(store)\n",
+    "\n",
+    "    # VISIBLE TEXT\n",
+    "    # TODO : \n",
+    "    #   Separate Paragraphs From HNs\n",
+    "    #   \"\"<p> or <h> with content <text>\"\"\n",
+    "    \"\"\"\n",
+    "    - Content (text)\n",
+    "    \"\"\"\n",
+    "    visible_text = []\n",
+    "    # HN\n",
+    "    for level in range(1, 7):  # HTML has 6 levels of headings (h1 to h6)\n",
+    "        headings = driver.find_elements(By.TAG_NAME,f\"h{level}\")\n",
+    "        for heading in headings:\n",
+    "            if heading.is_displayed():\n",
+    "                store = f\"Heading (h{level}): {heading.text}\"\n",
+    "                visible_text.append(store)\n",
+    "    # PARAGRAPHS\n",
+    "    paragraphs = driver.find_elements(By.TAG_NAME,\"p\")\n",
+    "    for paragraph in paragraphs:\n",
+    "        if paragraph.is_displayed():\n",
+    "            store = f\"Paragraph Text: {paragraph.text}\"\n",
+    "            visible_text.append(store)\n",
+    "\n",
+    "    # FORMS : INPUT TYPE TEXT\n",
+    "    # TODO : \n",
+    "    #   Input Type Text : \"form input of type text named <name>\"\n",
+    "    #   Input Type Submit : \"form input of type submit named <name>\"\n",
+    "    \"\"\"\n",
+    "    - input type text\n",
+    "        - Name\n",
+    "    - input type submit\n",
+    "        - Name\n",
+    "    \"\"\"\n",
+    "    visible_text_inputs = []\n",
+    "    input_fields = driver.find_elements(By.TAG_NAME,\"input\")\n",
+    "    for input_field in input_fields:\n",
+    "        if input_field.is_displayed():\n",
+    "            store = f\"Input Field Name: {input_field.get_attribute(\"name\")} Input field type: {input_field.get_attribute(\"type\")}\"\n",
+    "            visible_text_inputs.append(store)\n",
+    "            \n",
+    "    # Close the browser\n",
+    "    driver.quit()\n",
+    "    \n",
+    "    ############################################\n",
+    "    ## COMPOUND ELEMENTS INTO A LIST OF LISTS ##\n",
+    "    ############################################\n",
+    "\n",
+    "    data.append(visible_buttons)\n",
+    "    data.append(visible_links)\n",
+    "    data.append(visible_text_inputs)\n",
+    "    data.append(visible_text)\n",
+    "\n",
+    "    return data"
+   ]
   }
  ],
  "metadata": {
