scraper component testing and adding todos to prompt_generator and table_generator notebooks

--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Version 1"
+    "### Version 1 : Dataset Generator and System Proper Split"
    ]
   },
   {
@@ -101,14 +101,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Table Dataframe Initialization\n",
+    "\n",
+    "def dataframe_init(data):\n",
+    "    df = pd.DataFrame(dict([(key, pd.Series(value)) for key, value in data.items()]))\n",
+    "    return df\n",
+    "\n",
+    "# CSV Generator\n",
+    "def csv_from_test_case_batches(filename, data):\n",
+    "    cols = dataframe_init(data)\n",
+    "    cols.to_csv(f\"{filename}.csv\", sep='\\t', encoding='utf-8', index=False, header=True)\n",
+    "\n",
+    "# Dataset Generator Parameters\n",
+    "out_data = None # LLM Output\n",
+    "in_data = None # Scraped UI Element\n",
+    "instruction_data = None # Prompt\n",
+    "data = {\"output\" : out_data, \n",
+    "        \"input\" : in_data, \n",
+    "        \"instruction\" : instruction_data}\n",
+    "dataset_generator_df = dataframe_init(data)\n",
+    "\n",
+    "# System Proper Parameters\n",
+    "id = None\n",
+    "precondition = None\n",
+    "test_steps = None\n",
+    "expected_result = None \n",
+    "actual_result = \"Pass/Fail\"\n",
+    "data = {\"Test Case ID\" : id,\n",
+    "        \"Precondition\" : precondition,\n",
+    "        \"Test Steps\" : test_steps,\n",
+    "        \"Expected Result\" : expected_result,\n",
+    "        \"Actual Result\" : actual_result}\n",
+    "system_proper_df = dataframe_init(data)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO : Process of organizing the LLM output [streamline process of unpacking the list output from llm into something that is easy to list down]\n",
+    "# LLM Output Organization"
+   ]
   },
   {
    "cell_type": "code",
