started implementation of helper functions for table_generator and added suggestions for prompt_generator

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -127,22 +127,39 @@
     "    # Return Data\n",
     "    return_data = []\n",
     "    \n",
-    "    # Sub Data is a set of elements in a particular element type (aka button_list from the main data_list)\n",
-    "    # CONSIDER TODO : Don't compile the elements as a list in list (scraper)\n",
-    "    for sub_data in data:\n",
+    "    # # Sub Data is a set of elements in a particular element type (aka button_list from the main data_list)\n",
+    "    # # CONSIDER TODO : Don't compile the elements as a list in list (scraper)\n",
+    "    # for sub_data in data:\n",
     "\n",
-    "        element_test_cases = []\n",
+    "    #     element_test_cases = []\n",
     "\n",
-    "        appending = []\n",
+    "    #     appending = []\n",
     "        \n",
-    "        for dat in sub_data: # Can be read as button in button_list_data\n",
-    "            appending.append(chain.invoke({\"question\": str(dat)})) # Prompt Generator : Append UI Element to Prompt Template\n",
-    "        element_test_cases.append(appending)\n",
+    "    #     for dat in sub_data: # Can be read as button in button_list_data\n",
+    "    #         appending.append(chain.invoke({\"question\": str(dat)})) # Prompt Generator : Append UI Element to Prompt Template\n",
+    "    #     element_test_cases.append(appending)\n",
     "            \n",
-    "        # LLM Reset To Free Up Context\n",
-    "        chain = load_model_chain(template, model_str)\n",
+    "    #     # LLM Reset To Free Up Context\n",
+    "    #     chain = load_model_chain(template, model_str)\n",
     "\n",
-    "        return_data.append(element_test_cases)\n",
+    "    #     return_data.append(element_test_cases)\n",
+    "\n",
+    "    #     \"\"\"\n",
+    "    #     How the current structure looks like:\n",
+    "    #         return_data\n",
+    "    #             element_test_cases[0] # element set\n",
+    "    #                 appending # \n",
+    "    #                     llm output[0]: \"Verify the functionality of the Link Element 'Home'\"~\"The user is on the webpage 'https://bicol-u.edu.ph/'\"~\"'1. User navigates to the webpage \\'https://bicol-u.edu.ph/\\'' '2. Click on Link Element \\'Home\\'' '3. Verify if the webpage opens in a new tab/window.'\"~\"Webpage 'https://bicol-u.edu.ph/' should open in a new tab/window.\"\n",
+    "    #                     llm output[1]: \n",
+    "    #             element_test_cases[1]\n",
+    "    #     \"\"\"\n",
+    "\n",
+    "    # Suggestion:\n",
+    "    for sub_data in data:\n",
+    "        for dat in sub_data:\n",
+    "            return_data.append(chain.invoke({\"question\": str(dat)}))\n",
+    "            # LLM Reset To Free Up Context\n",
+    "            chain = load_model_chain(template, model_str)\n",
     "\n",
     "    return return_data\n"
    ]
