--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -143,7 +143,87 @@
    "outputs": [],
    "source": [
     "# TODO : Process of organizing the LLM output [streamline process of unpacking the list output from llm into something that is easy to list down]\n",
-    "# LLM Output Organization"
+    "# LLM Output Organization\n",
+    "\n",
+    "def create_fine_tuning_dataset(scraped_data, llm_output):\n",
+    "    # Prepare data to be placed in the Input Column\n",
+    "    \"\"\"\n",
+    "    Structure of scraped_data:\n",
+    "        scraped_data\n",
+    "            item_set (e.g. buttons)\n",
+    "                item (e.g button)\n",
+    "    \"\"\"\n",
+    "    input_data = []\n",
+    "    for item_set in scraped_data:\n",
+    "        for item in item_set:\n",
+    "            input_data.append(item)\n",
+    "\n",
+    "    # Prepare data to be plcaed in the Output Column\n",
+    "    \"\"\"\n",
+    "    Structure of llm_output:\n",
+    "        llm_output:\n",
+    "            output_set (e.g. buttons)\n",
+    "                output_item (test_case_parameters, split by ~)\n",
+    "    \"\"\"\n",
+    "    split_sets = []\n",
+    "    for test_case_set in llm_output:\n",
+    "        for test_case in test_case_set:\n",
+    "            for test in test_case:\n",
+    "                split_sets.append(test.split('~'))\n",
+    "    # Prepare data to be plcaed in the Output Column [Actual Column]\n",
+    "    output_data = []\n",
+    "    for sp in split_sets:\n",
+    "        output_data.append(sp)\n",
+    "        \n",
+    "    # Fine-Tuning Template\n",
+    "    text_data = []\n",
+    "    i = 0\n",
+    "    while (i < len(input_data)):\n",
+    "        template = f\"####Question:\\n Generate test case for the following UI element: {input_data[i]}\"\n",
+    "        text_data.append(template)\n",
+    "        i+=1\n",
+    "\n",
+    "def create_table_dataset(scraped_data, llm_output):\n",
+    "    # Prepare data to be placed in the Input Column\n",
+    "    \"\"\"\n",
+    "    Structure of scraped_data:\n",
+    "        scraped_data\n",
+    "            item_set (e.g. buttons)\n",
+    "                item (e.g button)\n",
+    "    \"\"\"\n",
+    "    input_data = []\n",
+    "    for item_set in scraped_data:\n",
+    "        for item in item_set:\n",
+    "            input_data.append(item)\n",
+    "\n",
+    "    # Prepare data to be plcaed in the Output Column\n",
+    "    \"\"\"\n",
+    "    Structure of llm_output:\n",
+    "        llm_output:\n",
+    "            output_set (e.g. buttons)\n",
+    "                output_item (test_case_parameters, split by ~)\n",
+    "    \"\"\"\n",
+    "    split_sets = []\n",
+    "    for test_case_set in llm_output:\n",
+    "        for test_case in test_case_set:\n",
+    "            for test in test_case:\n",
+    "                split_sets.append(test.split('~'))\n",
+    "    # Prepare data to be plcaed in the Output Column [Actual Column]\n",
+    "    output_data = []\n",
+    "    for sp in split_sets:\n",
+    "        # i = 0\n",
+    "        for s in sp:\n",
+    "            # i += 1\n",
+    "            # output_data[i].append(s)\n",
+    "            output_data.append(sp)\n",
+    "        \n",
+    "    # Fine-Tuning Template\n",
+    "    text_data = []\n",
+    "    i = 0\n",
+    "    while (i < len(input_data)):\n",
+    "        template = f\"####Question:\\n Generate test case for the following UI element: {input_data[i]}\"\n",
+    "        text_data.append(template)\n",
+    "        i+=1"
    ]
   },
   {
