added attributes to scraper code

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -85,18 +85,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prompt Generator + LLM\n",
-    "\n",
-    "# TODO : Streamline Process (make it easier to read)\n",
-    "\n",
-    "# CONTEXT\n",
+    "# Langchain and Ollama\n",
+    "import langchain\n",
+    "from langchain_ollama.llms import OllamaLLM\n",
+    "from langchain_core.prompts import ChatPromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CONTEXT V1\n",
     "template = \"\"\"\n",
-    "You are a quality assurance expert that generates functional test cases for websites. You take in a UI element and you generate a functional test case.\n",
+    "You are a quality assurance expert that generates functional test cases for websites. You take in a UI element and you generate a functional test case for usability.\n",
     "\n",
-    "Here is the UI element (some elements have a link attached to them): {question}\n",
+    "Some UI elements have a link attached to them and other properties.\n",
     "ONLY output in the following format: \n",
     "\"Objective\"~\"Preconditions\"~\"Test Steps\"~\"Expected Result\"\n",
-    "\n",
     "DO NOT output any other text. DO NOT output 'Here are the test cases...', your output should be like the example output below.\n",
     "\n",
     "Example Input:\n",
@@ -109,7 +116,19 @@
     "\"Verify the functionality of the Link Element 'Academics'\"~\"The user is on the webpage 'https://bicol-u.edu.ph/'\"~\"'1. User navigates to the webpage \\'https://bicol-u.edu.ph/\\'' '2. Click on Link Element \\'Academics\\'' '3. Verify if the link url changes to \\'https://bicol-u.edu.ph/#\\'' '4. Verify if a dropdown below \\'Academics\\' is visible'\"~\"A dropdown should show below 'Academics', but the webpage does not change\"\n",
     "...\n",
     "\n",
-    "\"\"\"\n",
+    "Here is the UI element : {question}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prompt Generator + LLM\n",
+    "\n",
+    "# TODO : Streamline Process (make it easier to read)\n",
     "\n",
     "# Load Model Chain\n",
     "def load_model_chain(template : str =  template, model_str : str = \"llama3.1\"):\n",
@@ -127,34 +146,6 @@
     "    # Return Data\n",
     "    return_data = []\n",
     "    \n",
-    "    # # Sub Data is a set of elements in a particular element type (aka button_list from the main data_list)\n",
-    "    # # CONSIDER TODO : Don't compile the elements as a list in list (scraper)\n",
-    "    # for sub_data in data:\n",
-    "\n",
-    "    #     element_test_cases = []\n",
-    "\n",
-    "    #     appending = []\n",
-    "        \n",
-    "    #     for dat in sub_data: # Can be read as button in button_list_data\n",
-    "    #         appending.append(chain.invoke({\"question\": str(dat)})) # Prompt Generator : Append UI Element to Prompt Template\n",
-    "    #     element_test_cases.append(appending)\n",
-    "            \n",
-    "    #     # LLM Reset To Free Up Context\n",
-    "    #     chain = load_model_chain(template, model_str)\n",
-    "\n",
-    "    #     return_data.append(element_test_cases)\n",
-    "\n",
-    "    #     \"\"\"\n",
-    "    #     How the current structure looks like:\n",
-    "    #         return_data\n",
-    "    #             element_test_cases[0] # element set\n",
-    "    #                 appending # \n",
-    "    #                     llm output[0]: \"Verify the functionality of the Link Element 'Home'\"~\"The user is on the webpage 'https://bicol-u.edu.ph/'\"~\"'1. User navigates to the webpage \\'https://bicol-u.edu.ph/\\'' '2. Click on Link Element \\'Home\\'' '3. Verify if the webpage opens in a new tab/window.'\"~\"Webpage 'https://bicol-u.edu.ph/' should open in a new tab/window.\"\n",
-    "    #                     llm output[1]: \n",
-    "    #             element_test_cases[1]\n",
-    "    #     \"\"\"\n",
-    "\n",
-    "    # Suggestion:\n",
     "    for sub_data in data:\n",
     "        for dat in sub_data:\n",
     "            return_data.append(chain.invoke({\"question\": str(dat)}))\n",
@@ -163,11 +154,24 @@
     "\n",
     "    return return_data\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "thesis-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
