--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -235,8 +235,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "thesis-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
