polish v1 of prompt_generator and table_generator

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -146,11 +146,10 @@
     "    # Return Data\n",
     "    return_data = []\n",
     "    \n",
-    "    for sub_data in data:\n",
-    "        for dat in sub_data:\n",
-    "            return_data.append(chain.invoke({\"question\": str(dat)}))\n",
-    "            # LLM Reset To Free Up Context\n",
-    "            chain = load_model_chain(template, model_str)\n",
+    "    for item in data:\n",
+    "        return_data.append(chain.invoke({\"question\": str(item)}))\n",
+    "        # LLM Reset To Free Up Context\n",
+    "        chain = load_model_chain(template, model_str)\n",
     "\n",
     "    return return_data\n"
    ]
