--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -102,8 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Table Dataframe Initialization\n",
+    "# Pandas\n",
+    "import pandas as pd\n",
     "\n",
+    "# Table Dataframe Initialization\n",
     "def dataframe_init(data):\n",
     "    df = pd.DataFrame(dict([(key, pd.Series(value)) for key, value in data.items()]))\n",
     "    return df\n",
@@ -111,29 +113,7 @@
     "# CSV Generator\n",
     "def csv_from_test_case_batches(filename, data):\n",
     "    cols = dataframe_init(data)\n",
-    "    cols.to_csv(f\"{filename}.csv\", sep='\\t', encoding='utf-8', index=False, header=True)\n",
-    "\n",
-    "# Dataset Generator Parameters\n",
-    "out_data = None # LLM Output\n",
-    "in_data = None # Scraped UI Element\n",
-    "instruction_data = None # Prompt\n",
-    "data = {\"output\" : out_data, \n",
-    "        \"input\" : in_data, \n",
-    "        \"instruction\" : instruction_data}\n",
-    "dataset_generator_df = dataframe_init(data)\n",
-    "\n",
-    "# System Proper Parameters\n",
-    "id = None\n",
-    "precondition = None\n",
-    "test_steps = None\n",
-    "expected_result = None \n",
-    "actual_result = \"Pass/Fail\"\n",
-    "data = {\"Test Case ID\" : id,\n",
-    "        \"Precondition\" : precondition,\n",
-    "        \"Test Steps\" : test_steps,\n",
-    "        \"Expected Result\" : expected_result,\n",
-    "        \"Actual Result\" : actual_result}\n",
-    "system_proper_df = dataframe_init(data)"
+    "    cols.to_csv(f\"{filename}.csv\", sep='\\t', encoding='utf-8', index=False, header=True)"
    ]
   },
   {
@@ -142,88 +122,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO : Process of organizing the LLM output [streamline process of unpacking the list output from llm into something that is easy to list down]\n",
-    "# LLM Output Organization\n",
     "\n",
     "def create_fine_tuning_dataset(scraped_data, llm_output):\n",
-    "    # Prepare data to be placed in the Input Column\n",
-    "    \"\"\"\n",
-    "    Structure of scraped_data:\n",
-    "        scraped_data\n",
-    "            item_set (e.g. buttons)\n",
-    "                item (e.g button)\n",
-    "    \"\"\"\n",
-    "    input_data = []\n",
-    "    for item_set in scraped_data:\n",
-    "        for item in item_set:\n",
-    "            input_data.append(item)\n",
-    "\n",
-    "    # Prepare data to be plcaed in the Output Column\n",
-    "    \"\"\"\n",
-    "    Structure of llm_output:\n",
-    "        llm_output:\n",
-    "            output_set (e.g. buttons)\n",
-    "                output_item (test_case_parameters, split by ~)\n",
-    "    \"\"\"\n",
-    "    split_sets = []\n",
-    "    for test_case_set in llm_output:\n",
-    "        for test_case in test_case_set:\n",
-    "            for test in test_case:\n",
-    "                split_sets.append(test.split('~'))\n",
-    "    # Prepare data to be plcaed in the Output Column [Actual Column]\n",
-    "    output_data = []\n",
-    "    for sp in split_sets:\n",
-    "        output_data.append(sp)\n",
-    "        \n",
-    "    # Fine-Tuning Template\n",
-    "    text_data = []\n",
+    "    # Dataset Generator : Resulting Dataset Columns / Parameters\n",
+    "    out_data = llm_output # LLM Output\n",
+    "    in_data = scraped_data # Scraped UI Element\n",
+    "    instruction_data = []\n",
     "    i = 0\n",
     "    while (i < len(input_data)):\n",
-    "        template = f\"####Question:\\n Generate test case for the following UI element: {input_data[i]}\"\n",
-    "        text_data.append(template)\n",
+    "        template = f\"####Question:\\n Generate test case for the following UI element: {in_data[i]}\"\n",
+    "        instruction_data.append(template)\n",
     "        i+=1\n",
     "\n",
-    "def create_table_dataset(scraped_data, llm_output):\n",
-    "    # Prepare data to be placed in the Input Column\n",
-    "    \"\"\"\n",
-    "    Structure of scraped_data:\n",
-    "        scraped_data\n",
-    "            item_set (e.g. buttons)\n",
-    "                item (e.g button)\n",
-    "    \"\"\"\n",
-    "    input_data = []\n",
-    "    for item_set in scraped_data:\n",
-    "        for item in item_set:\n",
-    "            input_data.append(item)\n",
+    "    data = {\"output\" : out_data, \n",
+    "            \"input\" : in_data, \n",
+    "            \"instruction\" : instruction_data}\n",
+    "    return dataframe_init(data)    \n",
     "\n",
-    "    # Prepare data to be plcaed in the Output Column\n",
-    "    \"\"\"\n",
-    "    Structure of llm_output:\n",
-    "        llm_output:\n",
-    "            output_set (e.g. buttons)\n",
-    "                output_item (test_case_parameters, split by ~)\n",
-    "    \"\"\"\n",
-    "    split_sets = []\n",
-    "    for test_case_set in llm_output:\n",
-    "        for test_case in test_case_set:\n",
-    "            for test in test_case:\n",
-    "                split_sets.append(test.split('~'))\n",
-    "    # Prepare data to be plcaed in the Output Column [Actual Column]\n",
-    "    output_data = []\n",
-    "    for sp in split_sets:\n",
-    "        # i = 0\n",
-    "        for s in sp:\n",
-    "            # i += 1\n",
-    "            # output_data[i].append(s)\n",
-    "            output_data.append(sp)\n",
-    "        \n",
-    "    # Fine-Tuning Template\n",
-    "    text_data = []\n",
-    "    i = 0\n",
-    "    while (i < len(input_data)):\n",
-    "        template = f\"####Question:\\n Generate test case for the following UI element: {input_data[i]}\"\n",
-    "        text_data.append(template)\n",
-    "        i+=1"
+    "# System Proper Parameters\n",
+    "def create_table_dataset(scraped_data, llm_output):\n",
+    "    # TODO : After Dataset Generator Development\n",
+    "\n",
+    "    id = None\n",
+    "    precondition = None\n",
+    "    test_steps = None\n",
+    "    expected_result = None \n",
+    "    actual_result = \"Pass/Fail\"\n",
+    "    data = {\"Test Case ID\" : id,\n",
+    "            \"Precondition\" : precondition,\n",
+    "            \"Test Steps\" : test_steps,\n",
+    "            \"Expected Result\" : expected_result,\n",
+    "            \"Actual Result\" : actual_result}\n",
+    "\n",
+    "    return dataframe_init(data)"
    ]
   },
   {
