integrated the three components as dataset generator version 1

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Version 1 : Dissection"
+    "### Version 1 : Dissection and Simplification"
    ]
   },
   {
@@ -88,15 +88,8 @@
     "# Langchain and Ollama\n",
     "import langchain\n",
     "from langchain_ollama.llms import OllamaLLM\n",
-    "from langchain_core.prompts import ChatPromptTemplate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
     "# CONTEXT V1\n",
     "template = \"\"\"\n",
     "You are a quality assurance expert that generates functional test cases for websites. You take in a UI element and you generate a functional test case for usability.\n",
@@ -117,18 +110,11 @@
     "...\n",
     "\n",
     "Here is the UI element : {question}\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prompt Generator + LLM\n",
+    "\"\"\"\n",
     "\n",
-    "# TODO : Streamline Process (make it easier to read)\n",
+    "# Prompt Generator + LLM\n",
+    "# TODO : Experiment With Prompts\n",
+    "# TODO : Create Altered Version For Fine-Tuned Model Version (aka System Proper)\n",
     "\n",
     "# Load Model Chain\n",
     "def load_model_chain(template : str =  template, model_str : str = \"llama3.1\"):\n",
@@ -138,7 +124,7 @@
     "    return chain\n",
     "\n",
     "# Create Test Case Data\n",
-    "def create_test_cases(data, model_str : str = \"llama3.1\" , template : str = template, batch_size : int = 10):\n",
+    "def create_test_cases(data, model_str : str = \"llama3.1\" , template : str = template):\n",
     "    \n",
     "    # Load LLM Chain\n",
     "    chain = load_model_chain(template, model_str)\n",
@@ -169,10 +155,18 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
