--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Version 1 : Dataset Generator and System Proper Split"
+    "### Version 1 : Dataset Generator Polish and System Proper Split"
    ]
   },
   {
@@ -113,15 +113,8 @@
     "# CSV Generator\n",
     "def csv_from_test_case_batches(filename, data):\n",
     "    cols = dataframe_init(data)\n",
-    "    cols.to_csv(f\"{filename}.csv\", sep='\\t', encoding='utf-8', index=False, header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    cols.to_csv(f\"{filename}.csv\", sep='\\t', encoding='utf-8', index=False, header=True)\n",
+    "\n",
     "\n",
     "def create_fine_tuning_dataset(scraped_data, llm_output):\n",
     "    # Dataset Generator : Resulting Dataset Columns / Parameters\n",
@@ -129,7 +122,7 @@
     "    in_data = scraped_data # Scraped UI Element\n",
     "    instruction_data = []\n",
     "    i = 0\n",
-    "    while (i < len(input_data)):\n",
+    "    while (i < len(scraped_data)):\n",
     "        template = f\"####Question:\\n Generate test case for the following UI element: {in_data[i]}\"\n",
     "        instruction_data.append(template)\n",
     "        i+=1\n",
@@ -137,6 +130,7 @@
     "    data = {\"output\" : out_data, \n",
     "            \"input\" : in_data, \n",
     "            \"instruction\" : instruction_data}\n",
+    "    csv_from_test_case_batches(\"fine_tuning_dataset\", data)\n",
     "    return dataframe_init(data)    \n",
     "\n",
     "# System Proper Parameters\n",
@@ -172,10 +166,18 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
