tested dataset generation notebook v1

--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,9 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Dataset Generator V1\n",
+      "Scraping Finished In : 25399.633169174194, ms\n",
+      "This will take a while to complete: Please wait by doing other things. You will receive a message once generation is complete.\n",
+      "Generation Finished In : 4609227.4215221405, ms\n",
+      "Dataset is Generated as a CSV File. Please rename it before running this notebook again\n"
+     ]
+    }
+   ],
    "source": [
     "import time # for checking runtime\n",
     "\n",
@@ -529,7 +541,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
