added TODO compilation to readme

--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -234,6 +234,8 @@
    ],
    "source": [
     "import time # for checking runtime\n",
+    "# TODO : Add a looping feature for scraping multiple websites\n",
+    "# IDEA : We Developers Hardcode a List of URLs, list of URLS are fed to the loop, and generates multiple csv files \n",
     "\n",
     "## MAIN PROGRAM ##\n",
     "print(\"Welcome to Dataset Generator V1\")\n",
